# PathPicker

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Lamboghini  Lotus Elan  Maserati  PATENTS  Peugeot  README.md  buildAndTest.sh  fpp  fpp.rb  index.html  makeDist.sh  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml
assets/: launch_page.css  script.js
debian/: README.pathpicker  control  package.sh  pathpicker.links  rules
debian/DEBIAN/: control
scripts/: buildAndTest.sh  makeDist.sh  makeManpage.sh  runTests.sh
src/: charCodeMapping.py  choose.py  colorPrinter.py  cursesAPI.py  format.py  formattedText.py  keyBindings.py  logger.py  output.py  parse.py  printHelp.py  print_help.py  processInput.py  process_input.py  repos.py  screenControl.py  screenFlags.py  stateFiles.py  test.py  usageStrings.py  utils.py  version.py
src/__tests__/: cursesForTest.py  initTest.py  keyBindingsForTest.py  localTestCases.py  screenForTest.py  screenTestRunner.py  testKeyBindingsParsing.py  testParsing.py  testScreen.py  testScreenRunner.py
src/__tests__/expected/: abbreviatedLineSelect.txt  dontWipeChrome.txt  executeKeysEndKeySelectLast.txt  fileNameWithSpacesDescription.txt  gitAbbreivatedFiles.txt  gitDiffWithPageDown.txt  gitDiffWithPageDownColor.txt  gitDiffWithScroll.txt  gitDiffWithScrollUp.txt  gitDiffWithValidation.txt  longFileTruncation.txt  longFileTruncationOddSize.txt  longFileTruncationTinyScreen.txt  longListEndKey.txt  longListHomeKey.txt  selectAllFromArg.txt  selectCommandWithPassedCommand.txt  selectDownSelect.txt  selectDownSelectInverse.txt  selectFirst.txt  selectTwoCommandMode.txt  selectWithDownSelect.txt  simpleLoadAndQuit.txt  simpleSelectWithAttributes.txt  simpleSelectWithColor.txt  simpleWithAttributes.txt  tallLoadAndQuit.txt  testDescribeFile.txt  tonsOfFiles.txt  xModeWithSelect.txt
src/__tests__/inputs/: absoluteGitDiff.txt  blogredesign.sublime-workspace  (+11 more)
src/pathpicker/: char_code_mapping.py  colorPrinter.py  color_printer.py  curses_api.py  format.py  formattedText.py  formatted_text.py  keyBindings.py  key_bindings.py  line_format.py  logger.py  output.py  parse.py  screen.py  screenControl.py  screenFlags.py  screen_control.py  screen_flags.py  state_files.py  usageStrings.py  usage_strings.py
src/tests/: evilFile No Prepend.txt  screenForTest.py  screenTestRunner.py  screen_for_test.py  screen_test_runner.py  testKeyBindingsParsing.py  testParsing.py  testScreen.py  test_key_bindings_parsing.py  test_parsing.py  test_screen.py
(+36 files in other folders)
